syntax = "proto3";

package zksync.types;

message SnapshotStorageLogsChunk {
    repeated SnapshotStorageLog storage_logs = 1;
}

message SnapshotStorageLog {
    // `account_address` and `storage_key` fields are obsolete and are not used in the new snapshot format;
    // `hashed_key` is used instead. The fields are retained for now to support recovery from old snapshots.
    optional bytes account_address = 1; // optional; H160
    optional bytes storage_key = 2; // optional; H256
    optional bytes hashed_key = 6; // optional; H256

    optional bytes storage_value = 3; // required; H256
    optional uint32 l1_batch_number_of_initial_write = 4; // required
    optional uint64 enumeration_index = 5; // required
}

message SnapshotFactoryDependencies {
    repeated SnapshotFactoryDependency factory_deps = 1;
}

message SnapshotFactoryDependency {
    optional bytes bytecode = 1; // required
}
